[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Onett.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://spriteSheets/Caleb.png" type="Texture" id=2]
[ext_resource path="res://Scenes/CharacterSelect.gd" type="Script" id=3]
[ext_resource path="res://spriteSheets/PlayerF_64_single.png" type="Texture" id=4]
[ext_resource path="res://Scenes/TransitionOpen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1048.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 328.0
margin_top = 8.0
margin_right = 736.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Choose your character"
align = 1
valign = 1

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 192.0
margin_top = 136.0
margin_right = 376.0
margin_bottom = 368.0
border_color = Color( 0, 1, 0.0862745, 1 )
border_width = 2.6
editor_only = false

[node name="ReferenceRect2" type="ReferenceRect" parent="."]
visible = false
margin_left = 609.0
margin_top = 131.0
margin_right = 793.0
margin_bottom = 363.0
border_color = Color( 0, 1, 0.0862745, 1 )
border_width = 2.6
editor_only = false

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 111.0
margin_top = 88.0
margin_right = 303.0
margin_bottom = 280.0
rect_scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.411765 )
margin_left = 541.0
margin_top = 95.0
margin_right = 637.0
margin_bottom = 191.0
rect_scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 4 )
expand = true

[node name="TransitionOpen" parent="." instance=ExtResource( 5 )]
layer = -1

[node name="playerName" type="LineEdit" parent="."]
margin_left = 341.0
margin_top = 462.0
margin_right = 672.0
margin_bottom = 510.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "Enter your name here"
caret_blink = true

[node name="nameValidation" type="Label" parent="."]
visible = false
margin_left = 287.0
margin_top = 399.0
margin_right = 719.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Please enter your name"
align = 1
valign = 1

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="gui_input" from="TextureRect2" to="." method="_on_TextureRect2_gui_input"]
[connection signal="mouse_entered" from="TextureRect2" to="." method="_on_TextureRect2_mouse_entered"]
